Fix intro columns on Firefox, adjust line height

--- a/src/sass/partials/_globals.scss
+++ b/src/sass/partials/_globals.scss
@@ -28,6 +28,7 @@ a {
   font: {
     size: $font-size * 1.5;
   }
+  line-height: 1.3;
 
   p {
     margin: 0 0 1em 0;
