--- a/src/sass/partials/sections/_intro.scss
+++ b/src/sass/partials/sections/_intro.scss
@@ -27,13 +27,15 @@
 
   &__feature-text {
     @extend .feature-text;
+    width: 50%;
     @media (max-width: 950px) {
       text-align: center;
+      width: 100%;
     }
   }
 
   &__drop-cap:first-letter {
-    font-size: 3em;
+    font-size: 3.7em;
     float: left;
     line-height: 0.7;
     @media (max-width: 950px) {
